ios app build issue fixed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   # Firebase
   firebase_auth: ^4.14.0
   firebase_core: ^2.22.0
-  firebase_storage: ^11.5.1
+  # firebase_storage: ^11.5.1
 
   # Build keeps loading forever
   cloud_firestore: ^4.13.1
