--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
 
   # Build keeps loading forever
   cloud_firestore: ^4.13.1
+  flutter_staggered_grid_view: ^0.7.0
   
 
 dev_dependencies:
