--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   # Build keeps loading forever
   cloud_firestore: ^4.13.1
   flutter_staggered_grid_view: ^0.7.0
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  firebase_storage: ^11.6.5
   
 
 dev_dependencies:
