--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,4 +67,5 @@ flutter {
 
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "com.google.firebase:firebase-iid:21.1.0"
 }
